--- a/templates/dane.html
+++ b/templates/dane.html
@@ -9,13 +9,13 @@
 	<div id="container">
 	
 	<div id="nav">
-	<p><a href="/">Źródlo danych</a></p>
-	<p><a href="/dane">Opcje danych</a></p>
-	<p><a href="/klasyfikator">Algorytm</a></p>
-	<p><a href="/wynik">Wynik</a></p>
-	<p><a href="/kopiuj">Kopiuj</a></p>
-	<p><a id="wyczysc" href="/wyczysc">Wyczyść</a></p>
-	<p><form method="post" action="klasyfikator"><button type="submit" name="slot" value="1">1</button><button type="submit" name="slot" value="2">2</button></form></p>
+	<p><a href="/">Data source</a></p>
+	<p><a href="/dane">Data options</a></p>
+	<p><a href="/klasyfikator">Algorithm</a></p>
+	<p><a href="/result">Result</a></p>
+	<p><a href="/kopiuj">Copy</a></p>
+	<p><a id="wyczysc" href="/wyczysc">Reset</a></p>
+	<p><form method="post" action="dane"><button type="submit" name="slot" value="1">1</button><button type="submit" name="slot" value="2">2</button></form></p>
 	</div>
 	
 	<div id="content">
@@ -23,31 +23,27 @@
 	<h4>Przygotuj dane</h4>
 	Slot: {{session['slot']}}<br/>
 	{% if session['slot']==1 %}
-	Obecny plik: {{session['wynik1'].filename}}
+	Current file: {{session['result1'].filename}}
 	{% elif session['slot']==2 %}
-	Obecny plik: {{session['wynik2'].filename}}
+	Current file: {{session['result2'].filename}}
 	{% endif %}
 	<form method="post" action="klasyfikator">
-		{% if 'target_col' in session %}
-		Numer kolumny z nazwami klas: <input type="number" name="target" value="{{session['target_col']}}"required/><br />
-		{% else %}
-		Numer kolumny z nazwami klas: <input type="number" name="target"required/><br />
-		{% endif %}
-		Przedział normalizacji: <input type="number" name="nmin" value="-1"/>-<input type="number" name="nmax" value="1"required/><br />
-		Pierwszy wiersz: <input type="checkbox" name="pwiersz" checked><br/>
-		Puste dane: <br/>
-		Usuń braki<input type="radio" name="puste" value="usun" checked><br/>
-		Uśrednij<input type="radio" name="puste" value="usrednij"><br/>
-		<button type="submit">Zatwierdź</button>
+		Column number with class names: <input type="number" name="target"required/><br />
+		Normalization range: <input type="number" name="nmin" value="-1"/>-<input type="number" name="nmax" value="1"required/><br />
+		Include first row?: <input type="checkbox" name="pwiersz" checked><br/>
+		What to do with missing data?: <br/>
+		Delete rows<input type="radio" name="puste" value="usun" checked><br/>
+		Find average<input type="radio" name="puste" value="usrednij"><br/>
+		<button type="submit">Submit</button>
 	</form>
 	{% if session['slot']==1 %}
-	Wierszy: {{session['wynik1'].n_wierszy}}<br/>
-	Podgląd:
-	{{session['wynik1'].preview|safe}}
+	Number of rows: {{session['result1'].n_wierszy}}<br/>
+	Data preview(first 3 rows):
+	{{session['result1'].preview|safe}}
 	{% elif session['slot']==2 %}
-	Wierszy: {{session['wynik2'].n_wierszy}}<br/>
-	Podgląd:
-	{{session['wynik2'].preview|safe}}
+	Number of rows: {{session['result2'].n_wierszy}}<br/>
+	Preview(first 3 rows):
+	{{session['result2'].preview|safe}}
 	{% endif %}
 	</div>
 	
