--- a/templates/index.html
+++ b/templates/index.html
@@ -10,27 +10,27 @@
 	<div id="container">
 	
 	<div id="nav">
-	<p><a href="/">Źródlo danych</a></p>
-	<p><a href="/dane">Opcje danych</a></p>
-	<p><a href="/klasyfikator">Algorytm</a></p>
-	<p><a href="/wynik">Wynik</a></p>
-	<p><a href="/kopiuj">Kopiuj</a></p>
-	<p><a id="wyczysc" href="/wyczysc">Wyczyść</a></p>
+	<p><a href="/">Data source</a></p>
+	<p><a href="/dane">Data options</a></p>
+	<p><a href="/klasyfikator">Algorithm</a></p>
+	<p><a href="/result">Result</a></p>
+	<p><a href="/kopiuj">Copy</a></p>
+	<p><a id="wyczysc" href="/wyczysc">Reset</a></p>
 	<p><form method="post" action="dane"><button type="submit" name="slot" value="1">1</button><button type="submit" name="slot" value="2">2</button></form></p>
 	</div>
 	
 	<div id="content">
 	Slot: {{session['slot']}}<br/>
 	{% if session['slot']==1 %}
-	Obecny plik: {{session['wynik1'].filename}}
+	Current file: {{session['result1'].filename}}
 	{% elif session['slot']==2 %}
-	Obecny plik: {{session['wynik2'].filename}}
+	Current file: {{session['result2'].filename}}
 	{% endif %}
-	<h4>Prześlij plik z danymi</h4>
+	<h4>Submit file containing data</h4>
 	<form method="post" action="dane" enctype=multipart/form-data>
-		Wybierz plik: <input type="file" name="dane" required/><br/>
+		Select: <input type="file" name="dane" required/><br/>
 		Separator: <input type="text" name="separator" required/>
-		<button type="submit">Wyślij</button>
+		<button type="submit">Submit</button>
 	</form>
 	
 	</div>
