zmieniono:       main.py 	zmieniono:       static/algs.js 	zmieniono:       templates/index.html 	zmieniono:       templates/klasyfikator.html 	zmieniono:       templates/result.html 	nowy plik:       xd.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 	{% endif %}
 	<h4>Submit file containing data</h4>
 	<form method="post" action="dane" enctype=multipart/form-data>
-		Select: <input type="file" name="dane" required/><br/>
+		Select: <input type="file" name="dane" value="xd" required /><br/>
 		Separator: <input type="text" name="separator" required/>
 		<button type="submit">Submit</button>
 	</form>
