--- a/templates/klasyfikator.html
+++ b/templates/klasyfikator.html
@@ -39,6 +39,7 @@
 			<option value="Dummy">Dummy</option>
 			<option value="NB">Naive Bayes</option>
 			<option value="GBC">Gradient boosting</option>
+			<option value="DT">Decision tree</option>
 		</select>
 		<div id="params">
 		Epochs: <input type="number" name="epoki" value="100" required><br/>
