--- a/templates/result.html
+++ b/templates/result.html
@@ -16,7 +16,7 @@
 	<p><a href="/result">Result</a></p>
 	<p><a href="/kopiuj">Copy</a></p>
 	<p><a id="wyczysc" href="/wyczysc">Reset</a></p>
-	<p><form method="post" action="dane"><button type="submit" name="slot" value="1">1</button><button type="submit" name="slot" value="2">2</button></form></p>
+	<p><form method="post" action="result"><button type="submit" name="slotw" value="1">1</button><button type="submit" name="slotw" value="2">2</button></form></p>
 	</div>
 	<div id="content">
 	Slot: {{session['slot']}}<br/>
