zmieniono:       main.py 	zmieniono:       static/algs.js 	zmieniono:       templates/klasyfikator.html 	usunięto:        xd.py

--- a/templates/klasyfikator.html
+++ b/templates/klasyfikator.html
@@ -40,6 +40,7 @@
 			<option value="NB">Naive Bayes</option>
 			<option value="GBC">Gradient boosting</option>
 			<option value="DT">Decision tree</option>
+			<option value="RF">Random forest</option>
 		</select>
 		<div id="params">
 		Epochs: <input type="number" name="epoki" value="100" required><br/>
