zmieniono:       main.py 	zmieniono:       static/algs.js 	zmieniono:       templates/klasyfikator.html

--- a/templates/klasyfikator.html
+++ b/templates/klasyfikator.html
@@ -42,6 +42,7 @@
 			<option value="DT">Decision tree classifier</option>
 			<option value="RF">Random forest classifier</option>
 			<option value="Ridge">Ridge classifier</option>
+			<option value="LDA">LDA classifier</option>
 		</select>
 		<div id="params">
 		Epochs: <input type="number" name="epoki" value="100" required><br/>
