--- a/templates/klasyfikator.html
+++ b/templates/klasyfikator.html
@@ -45,16 +45,7 @@
 			<option value="LDA">LDA classifier</option>
 		</select>
 		<div id="params">
-		Epochs: <input type="number" name="epoki" value="100" required><br/>
-		Tolerancy: <input type="number" name="tol" value="0.0001" step="any"> <br/>
-		Method: <select name="method">
-			<option value="lbfgs" selected>lbfgs</option>
-			<option value="liblinear">liblinear</option>
-			<option value="newton-cg">newton-cg</option>
-			<option value="newton-cholesky">newton-cholesky</option>
-			<option value="sag">sag</option>
-			<option value="saga">saga</option>
-			</select>
+		<table><tr><td>Epoki: </td><td><input type="number" name="epoki" value="100" required></td></tr><tr><td>Tolerancja: </td><td><input type="number" name="tol" value=0.0001 step="any" required></td></tr><tr><td>Metoda: </td><td><select name="method"><option value="lbfgs" selected>lbfgs</option><option value="liblinear">liblinear</option><option value="newton-cg">newton-cg</option><option value="newton-cholesky">newton-cholesky</option><option value="sag">sag</option><option value="saga">saga</option></select></td></tr></table>
 		</div>
 		<button type="submit">Submit</button>
 		<button type="submit" name="auto" id="auto">Auto</button><div id="wait">Please wait</div>
