zmieniono:       main.py 	zmieniono:       static/style.css 	zmieniono:       templates/dane.html 	nowy plik:       templates/help.html 	zmieniono:       templates/index.html 	zmieniono:       templates/klasyfikator.html 	zmieniono:       templates/result.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,9 @@
 	<p><a href="/klasyfikator">Algorithm</a></p>
 	<p><a href="/result">Result</a></p>
 	<p><a href="/kopiuj">Copy</a></p>
+	<p><form method="post" action="dane"><button type="submit" name="slot" value="1">1</button><button type="submit" name="slot" value="2">2</button></form>
 	<p><a id="wyczysc" href="/wyczysc">Reset</a></p>
-	<p><form method="post" action="dane"><button type="submit" name="slot" value="1">1</button><button type="submit" name="slot" value="2">2</button></form></p>
+	<p><a href="/help">Help</a></p></p>
 	</div>
 	
 	<div id="content">
