zmieniono:       main.py 	zmieniono:       static/algs.js 	zmieniono:       static/style.css 	zmieniono:       templates/dane.html 	zmieniono:       templates/klasyfikator.html 	zmieniono:       templates/kopiuj.html

--- a/templates/klasyfikator.html
+++ b/templates/klasyfikator.html
@@ -15,7 +15,7 @@
 	<p><a href="/klasyfikator">Algorithm</a></p>
 	<p><a href="/result">Result</a></p>
 	<p><a href="/kopiuj">Copy</a></p>
-	<p><form method="post" action="dane"><button type="submit" name="slot" value="1">1</button><button type="submit" name="slot" value="2">2</button></form></p>
+	<p><form method="post" action="/result"><button type="submit" name="slot" value="1">1</button><button type="submit" name="slot" value="2">2</button></form></p>
 	<p><a id="wyczysc" href="/wyczysc">Reset</a></p>
 	<p><a href="/help">Help</a></p></p>
 	</div>
@@ -46,10 +46,10 @@
 			<option value="LDA">LDA classifier</option>
 		</select>
 		<div id="params">
-		<table><tr><td>Epoki: </td><td><input type="number" name="epoki" value="100" required></td></tr><tr><td>Tolerancja: </td><td><input type="number" name="tol" value=0.0001 step="any" required></td></tr><tr><td>Metoda: </td><td><select name="method"><option value="lbfgs" selected>lbfgs</option><option value="liblinear">liblinear</option><option value="newton-cg">newton-cg</option><option value="newton-cholesky">newton-cholesky</option><option value="sag">sag</option><option value="saga">saga</option></select></td></tr></table>
+		<table><tr><td>Epochs: </td><td><input type="number" name="epoki" value="100" required></td></tr><tr><td>Tolerancy: </td><td><input type="number" name="tol" value=0.0001 step="any" required></td></tr><tr><td>Solver: </td><td><select name="method"><option value="lbfgs" selected>lbfgs</option><option value="liblinear">liblinear</option><option value="newton-cg">newton-cg</option><option value="newton-cholesky">newton-cholesky</option><option value="sag">sag</option><option value="saga">saga</option></select></td></tr></table>
 		</div>
 		<button type="submit">Submit</button>
-		<button type="submit" name="auto" id="auto">Auto</button><div id="wait">Please wait</div>
+		<button type="submit" name="auto" id="auto">Auto</button><div id="wait">Please wait...</div>
 	</form>
 	
 	</div>
