--- a/templates/help.html
+++ b/templates/help.html
@@ -11,10 +11,10 @@
 	
 	<div id="nav">
 	<p><a href="/">Data source</a></p>
-	<p><a href="/dane">Data options</a></p>
-	<p><a href="/klasyfikator">Algorithm</a></p>
+	<p><a href="/data">Data options</a></p>
+	<p><a href="/classifier">Algorithm</a></p>
 	<p><a href="/result">Result</a></p>
-	<p><a href="/kopiuj">Copy</a></p>
+	<p><a href="/copy">Copy</a></p>
 	<p><form method="post" action="dane"><button type="submit" name="slot" value="1">1</button><button type="submit" name="slot" value="2">2</button></form></p>
 	<p><a id="wyczysc" href="/wyczysc">Reset</a></p>
 	<p><a href="/help">Help</a></p></p>
