--- a/templates/result.html
+++ b/templates/result.html
@@ -11,10 +11,10 @@
 	
 <div id="nav">
 	<p><a href="/">Data source</a></p>
-	<p><a href="/dane">Data options</a></p>
-	<p><a href="/klasyfikator">Algorithm</a></p>
+	<p><a href="/data">Data options</a></p>
+	<p><a href="/classifier">Algorithm</a></p>
 	<p><a href="/result">Result</a></p>
-	<p><a href="/kopiuj">Copy</a></p>
+	<p><a href="/copy">Copy</a></p>
 	<p><form method="post" action="result"><button type="submit" name="slotw" value="1">1</button><button type="submit" name="slotw" value="2">2</button></form></p>
 	<p><a id="wyczysc" href="/wyczysc">Reset</a></p>
 	<p><a href="/help">Help</a></p></p>
@@ -22,9 +22,10 @@
 	<div id="content">
 	Slot: {{session['slot']}}<br/>
 	{% if session['slot']==1%}
-	{{session['result1'].data_cols}}
+	Data columns: {{session['result1'].data_cols}}
 	<h4>Algorithm: {{session['result1'].alg}}</h4>
-	Dane: {{session['result1'].filename}}<br />
+	Dataset: {{session['result1'].filename}}<br />
+	Data columns: {{session['result1'].data_cols}}<br/>
 	{{session['result1'].params|safe}}<br/><br/>
 	Accuracy = {{session['result1'].acc}}<br/>
 	Recall = {{session['result1'].rec}}<br/>
@@ -37,11 +38,12 @@
 	
 	<h4>Algorithm: {{session['result2'].alg}}</h4>
 	Dataset: {{session['result2'].filename}}<br />
+	Data columns: {{session['result2'].data_cols}}<br/>
 	{{session['result2'].params|safe}}<br/><br/>
 	Accuracy = {{session['result2'].acc}}<br/>
 	Recall = {{session['result2'].rec}}<br/>
 	Precision = {{session['result2'].prec}}<br/>
-	<h5>Macierz pomyłek</h5>
+	<h5>Confusion Matrix</h5>
 	{{session['result2'].confm|safe}}
 	{{session['result2'].class_distribution|safe}}
 	{% endif %}
